Removed legacy code in favor of ACSet progress

--- a/examples/company_demo/concise_demo_ACT.ipynb
+++ b/examples/company_demo/concise_demo_ACT.ipynb
@@ -16,7 +16,7 @@
    ],
    "source": [
     "# Import necessary libraries\n",
-    "using AlgebraicRelations.ACSetDB, AlgebraicRelations.ACSetQueries, AlgebraicRelations.ACSetInterface;"
+    "using AlgebraicRelations.DB, AlgebraicRelations.Queries, AlgebraicRelations.Interface;"
    ]
   },
   {
