Added workflow -> schema conversion

--- a/examples/company_demo/concise_demo_ACT.ipynb
+++ b/examples/company_demo/concise_demo_ACT.ipynb
@@ -4,19 +4,10 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "┌ Info: Precompiling AlgebraicRelations [1c3ea84b-a956-4dfe-a2f4-485757f48f1d]\n",
-      "└ @ Base loading.jl:1278\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import necessary libraries\n",
-    "using AlgebraicRelations.DB, AlgebraicRelations.Queries, AlgebraicRelations.Interface;"
+    "using AlgebraicRelations.DB, AlgebraicRelations.Queries, AlgebraicRelations.Interface, AlgebraicRelations.Workflows;"
    ]
   },
   {
@@ -33,30 +24,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@present WorkplaceSchema <: TheorySQL begin\n",
-    "    # Data tables\n",
-    "    employees::Ob\n",
-    "    employees_1_person::Attr(employees, Int64)\n",
-    "    employees_2_id::Attr(employees, Int64)\n",
+    "type_map = Dict(\n",
+    "            :Person => :Int64,\n",
+    "            :ID => :Int64,\n",
+    "            :Name => :String,\n",
+    "            :Salary => :Float64\n",
+    "            )\n",
+    "field_names = Dict(\n",
+    "            :employees => [:person, :id],\n",
+    "            :manager => [:person, :manager],\n",
+    "            :salary => [:person, :salary],\n",
+    "            :names => [:person, :full_name])\n",
+    "\n",
+    "@present Workflow(FreeSymmetricMonoidalCategory) begin\n",
+    "    ID::Ob\n",
+    "    Person::Ob\n",
+    "    Name::Ob\n",
+    "    Salary::Ob\n",
     "    \n",
-    "    names::Ob\n",
-    "    names_1_person::Hom(names, employees)\n",
-    "    names_2_full_name::Attr(names, String)\n",
-    "    \n",
-    "    salary::Ob\n",
-    "    salary_1_person::Hom(salary, employees)\n",
-    "    salary_2_salary::Attr(salary, Float64)\n",
-    "    \n",
-    "    # Relation tables\n",
-    "    manager::Ob\n",
-    "    manager_1_person::Hom(manager, employees)\n",
-    "    manager_2_manager::Hom(manager, employees)\n",
-    "    \n",
-    "    relation::Ob\n",
-    "    relation_1_person1::Hom(relation, employees)\n",
-    "    relation_2_person2::Hom(relation, employees)\n",
-    "    relation_3_relationship::Attr(relation, Float64)\n",
+    "    employees::Hom(Person, ID)\n",
+    "    manager::Hom(Person, Person)\n",
+    "    salary::Hom(Person, Salary)\n",
+    "    names::Hom(Person, Name)\n",
     "end;\n",
+    "\n",
+    "WorkplaceSchema = wf_to_schema(Workflow, field_names, type_map)\n",
     "\n",
     "Workplace = SchemaType(WorkplaceSchema);\n",
     "schema = Workplace();"
@@ -74,8 +66,7 @@
       "CREATE TABLE manager (person int, manager int);\n",
       "CREATE TABLE employees (person int, id int);\n",
       "CREATE TABLE names (person int, full_name text);\n",
-      "CREATE TABLE salary (person int, salary float4);\n",
-      "CREATE TABLE relation (person1 int, person2 int, relationship float4)"
+      "CREATE TABLE salary (person int, salary float4)"
      ]
     }
    ],
@@ -256,15 +247,15 @@
     "# We generate a query that gets all employees make a salary within some range\n",
     "q1 = @query schema (emp_name, salary) where \n",
     "                          (p::Int64, emp_name::String, \n",
-    "                           salary::Float64, \n",
-    "                           _slower::Float64, _supper::Float64) begin                       \n",
+    "                           salary::Float64,\n",
+    "                           _sallower::Float64, _salupper::Float64) begin                       \n",
     "  # Define name relationships\n",
     "  names(p, emp_name)\n",
     "  \n",
     "  # Define salary relationships (with input range)\n",
     "  salary(p,salary)\n",
-    "  <=(salary, _supper)\n",
-    "  >=(salary, _slower)\n",
+    "  <=(salary, _salupper)\n",
+    "  >=(salary, _sallower)\n",
     "end;\n",
     "print(to_sql(q1))\n",
     "draw_query(q1)"
@@ -516,7 +507,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "conn = Connection(\"dbname=test_emp\");"
+    "conn = Connection(\"dbname=test_db\");"
    ]
   },
   {
@@ -537,7 +528,7 @@
     {
      "data": {
       "text/html": [
-       "<table class=\"data-frame\"><thead><tr><th></th><th>emp_name</th><th>salary</th></tr><tr><th></th><th>String?</th><th>Float32?</th></tr></thead><tbody><p>4 rows × 2 columns</p><tr><th>1</th><td>Alice Smith</td><td>150000.0</td></tr><tr><th>2</th><td>Bob Jones</td><td>50000.0</td></tr><tr><th>3</th><td>Eve Johnson</td><td>80000.0</td></tr><tr><th>4</th><td>John Doe</td><td>90000.0</td></tr></tbody></table>"
+       "<table class=\"data-frame\"><thead><tr><th></th><th>emp_name</th><th>salary</th></tr><tr><th></th><th>String?</th><th>Float32?</th></tr></thead><tbody><p>7 rows × 2 columns</p><tr><th>1</th><td>(Bob,\" Ross\")</td><td>100000.0</td></tr><tr><th>2</th><td>(Thor,\" Odinson\")</td><td>200000.0</td></tr><tr><th>3</th><td>(Tony,\" Stark\")</td><td>80000.0</td></tr><tr><th>4</th><td>(Mr.,\" Rogers\")</td><td>70000.0</td></tr><tr><th>5</th><td>(Billy,\" Mays\")</td><td>50000.0</td></tr><tr><th>6</th><td>(Albert,\" Einstein\")</td><td>30000.0</td></tr><tr><th>7</th><td>(Stephen,\" Hawking\")</td><td>20000.0</td></tr></tbody></table>"
       ],
       "text/latex": [
        "\\begin{tabular}{r|cc}\n",
@@ -545,21 +536,27 @@
        "\t\\hline\n",
        "\t& String? & Float32?\\\\\n",
        "\t\\hline\n",
-       "\t1 & Alice Smith & 150000.0 \\\\\n",
-       "\t2 & Bob Jones & 50000.0 \\\\\n",
-       "\t3 & Eve Johnson & 80000.0 \\\\\n",
-       "\t4 & John Doe & 90000.0 \\\\\n",
+       "\t1 & (Bob,\" Ross\") & 100000.0 \\\\\n",
+       "\t2 & (Thor,\" Odinson\") & 200000.0 \\\\\n",
+       "\t3 & (Tony,\" Stark\") & 80000.0 \\\\\n",
+       "\t4 & (Mr.,\" Rogers\") & 70000.0 \\\\\n",
+       "\t5 & (Billy,\" Mays\") & 50000.0 \\\\\n",
+       "\t6 & (Albert,\" Einstein\") & 30000.0 \\\\\n",
+       "\t7 & (Stephen,\" Hawking\") & 20000.0 \\\\\n",
        "\\end{tabular}\n"
       ],
       "text/plain": [
-       "4×2 DataFrame\n",
-       "│ Row │ emp_name    │ salary   │\n",
-       "│     │ \u001b[90mString?\u001b[39m     │ \u001b[90mFloat32?\u001b[39m │\n",
-       "├─────┼─────────────┼──────────┤\n",
-       "│ 1   │ Alice Smith │ 150000.0 │\n",
-       "│ 2   │ Bob Jones   │ 50000.0  │\n",
-       "│ 3   │ Eve Johnson │ 80000.0  │\n",
-       "│ 4   │ John Doe    │ 90000.0  │"
+       "7×2 DataFrame\n",
+       "│ Row │ emp_name             │ salary   │\n",
+       "│     │ \u001b[90mString?\u001b[39m              │ \u001b[90mFloat32?\u001b[39m │\n",
+       "├─────┼──────────────────────┼──────────┤\n",
+       "│ 1   │ (Bob,\" Ross\")        │ 100000.0 │\n",
+       "│ 2   │ (Thor,\" Odinson\")    │ 200000.0 │\n",
+       "│ 3   │ (Tony,\" Stark\")      │ 80000.0  │\n",
+       "│ 4   │ (Mr.,\" Rogers\")      │ 70000.0  │\n",
+       "│ 5   │ (Billy,\" Mays\")      │ 50000.0  │\n",
+       "│ 6   │ (Albert,\" Einstein\") │ 30000.0  │\n",
+       "│ 7   │ (Stephen,\" Hawking\") │ 20000.0  │"
       ]
      },
      "execution_count": 8,
@@ -579,7 +576,7 @@
     {
      "data": {
       "text/html": [
-       "<table class=\"data-frame\"><thead><tr><th></th><th>emp_name</th><th>man_name</th><th>salary</th></tr><tr><th></th><th>String?</th><th>String?</th><th>Float32?</th></tr></thead><tbody><p>1 rows × 3 columns</p><tr><th>1</th><td>Eve Johnson</td><td>John Doe</td><td>90000.0</td></tr></tbody></table>"
+       "<table class=\"data-frame\"><thead><tr><th></th><th>emp_name</th><th>man_name</th><th>salary</th></tr><tr><th></th><th>String?</th><th>String?</th><th>Float32?</th></tr></thead><tbody><p>4 rows × 3 columns</p><tr><th>1</th><td>(Mr.,\" Rogers\")</td><td>(Tony,\" Stark\")</td><td>80000.0</td></tr><tr><th>2</th><td>(Billy,\" Mays\")</td><td>(Mr.,\" Rogers\")</td><td>70000.0</td></tr><tr><th>3</th><td>(Albert,\" Einstein\")</td><td>(Mr.,\" Rogers\")</td><td>70000.0</td></tr><tr><th>4</th><td>(Stephen,\" Hawking\")</td><td>(Tony,\" Stark\")</td><td>80000.0</td></tr></tbody></table>"
       ],
       "text/latex": [
        "\\begin{tabular}{r|ccc}\n",
@@ -587,15 +584,21 @@
        "\t\\hline\n",
        "\t& String? & String? & Float32?\\\\\n",
        "\t\\hline\n",
-       "\t1 & Eve Johnson & John Doe & 90000.0 \\\\\n",
+       "\t1 & (Mr.,\" Rogers\") & (Tony,\" Stark\") & 80000.0 \\\\\n",
+       "\t2 & (Billy,\" Mays\") & (Mr.,\" Rogers\") & 70000.0 \\\\\n",
+       "\t3 & (Albert,\" Einstein\") & (Mr.,\" Rogers\") & 70000.0 \\\\\n",
+       "\t4 & (Stephen,\" Hawking\") & (Tony,\" Stark\") & 80000.0 \\\\\n",
        "\\end{tabular}\n"
       ],
       "text/plain": [
-       "1×3 DataFrame\n",
-       "│ Row │ emp_name    │ man_name │ salary   │\n",
-       "│     │ \u001b[90mString?\u001b[39m     │ \u001b[90mString?\u001b[39m  │ \u001b[90mFloat32?\u001b[39m │\n",
-       "├─────┼─────────────┼──────────┼──────────┤\n",
-       "│ 1   │ Eve Johnson │ John Doe │ 90000.0  │"
+       "4×3 DataFrame\n",
+       "│ Row │ emp_name             │ man_name        │ salary   │\n",
+       "│     │ \u001b[90mString?\u001b[39m              │ \u001b[90mString?\u001b[39m         │ \u001b[90mFloat32?\u001b[39m │\n",
+       "├─────┼──────────────────────┼─────────────────┼──────────┤\n",
+       "│ 1   │ (Mr.,\" Rogers\")      │ (Tony,\" Stark\") │ 80000.0  │\n",
+       "│ 2   │ (Billy,\" Mays\")      │ (Mr.,\" Rogers\") │ 70000.0  │\n",
+       "│ 3   │ (Albert,\" Einstein\") │ (Mr.,\" Rogers\") │ 70000.0  │\n",
+       "│ 4   │ (Stephen,\" Hawking\") │ (Tony,\" Stark\") │ 80000.0  │"
       ]
      },
      "execution_count": 9,
@@ -618,6 +621,10 @@
   }
  ],
  "metadata": {
+  "@webio": {
+   "lastCommId": null,
+   "lastKernelId": null
+  },
   "kernelspec": {
    "display_name": "Julia 1.5.2",
    "language": "julia",
